--- a/commotion-meshbook/en.lproj/MainMenu.xib
+++ b/commotion-meshbook/en.lproj/MainMenu.xib
@@ -143,11 +143,20 @@
 					</object>
 					<object class="NSMenuItem" id="769362584">
 						<reference key="NSMenu" ref="660030228"/>
-						<bool key="NSIsDisabled">YES</bool>
 						<string key="NSTitle">Available Profiles</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSImage" ref="121387101"/>
+						<reference key="NSOnImage" ref="457649730"/>
+						<reference key="NSMixedImage" ref="1026303971"/>
+					</object>
+					<object class="NSMenuItem" id="958491959">
+						<reference key="NSMenu" ref="660030228"/>
+						<bool key="NSIsDisabled">YES</bool>
+						<bool key="NSIsHidden">YES</bool>
+						<string key="NSTitle"/>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="457649730"/>
 						<reference key="NSMixedImage" ref="1026303971"/>
 					</object>
@@ -328,6 +337,14 @@
 					</object>
 					<int key="connectionID">878</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">menuSelectedNetwork</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="958491959"/>
+					</object>
+					<int key="connectionID">897</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -383,6 +400,7 @@
 							<reference ref="645083052"/>
 							<reference ref="1022988786"/>
 							<reference ref="116861106"/>
+							<reference ref="958491959"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Status Menu</string>
@@ -480,6 +498,11 @@
 						<reference key="object" ref="116861106"/>
 						<reference key="parent" ref="660030228"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">893</int>
+						<reference key="object" ref="958491959"/>
+						<reference key="parent" ref="660030228"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -506,85 +529,15 @@
 				<string key="869.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="870.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="874.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="893.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">890</int>
+			<int key="maxID">897</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AppDelegate</string>
-					<string key="superclassName">NSObject</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">openSettings:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">openSettings:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">openSettings:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="menuMeshSSID">NSMenuItem</string>
-						<string key="menuMeshStatus">NSMenuItem</string>
-						<string key="menuNetworkBSSID">NSMenuItem</string>
-						<string key="menuNetworkChannel">NSMenuItem</string>
-						<string key="menuNetworkSSID">NSMenuItem</string>
-						<string key="menuNetworkStatus">NSMenuItem</string>
-						<string key="menuQuit">NSMenuItem</string>
-						<string key="profilesSubmenu">NSMenu</string>
-						<string key="statusMenu">NSMenu</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="menuMeshSSID">
-							<string key="name">menuMeshSSID</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuMeshStatus">
-							<string key="name">menuMeshStatus</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuNetworkBSSID">
-							<string key="name">menuNetworkBSSID</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuNetworkChannel">
-							<string key="name">menuNetworkChannel</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuNetworkSSID">
-							<string key="name">menuNetworkSSID</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuNetworkStatus">
-							<string key="name">menuNetworkStatus</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuQuit">
-							<string key="name">menuQuit</string>
-							<string key="candidateClassName">NSMenuItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesSubmenu">
-							<string key="name">profilesSubmenu</string>
-							<string key="candidateClassName">NSMenu</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statusMenu">
-							<string key="name">statusMenu</string>
-							<string key="candidateClassName">NSMenu</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AppDelegate.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
